DuPont DevSB/src/objects/Loop__dsRecipient__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Loop__Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Calc_Signing_Order__c</fullName>
        <formula>CASE( Loop__dsRoutingOrder__c , 0 , &quot;Carbon Copy&quot; , TEXT(Loop__dsRoutingOrder__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signing Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__CustomAccessCode__c</fullName>
        <description>Access Code</description>
        <inlineHelpText>This can be made dynamic by using tags from the Field Tagger.</inlineHelpText>
        <label>Access Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__DisplayTitle__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This option will display the recipient(s)&apos;s (contact, user, lead) title when initiating DDPs.</inlineHelpText>
        <label>Display Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__EmailText__c</fullName>
        <label>Email Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Embedded_Signer__c</fullName>
        <label>Embedded Signer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Routed via LOOPlus</fullName>
                </value>
                <value>
                    <fullName>Routed via Client Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Host_Address__c</fullName>
        <label>Host Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Host_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Host Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Host Recipients</relationshipLabel>
        <relationshipName>Host_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loop__Host_Role_Group_Names__c</fullName>
        <label>Host Role/Group Names</label>
        <length>7000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Host_Static_Email__c</fullName>
        <label>Host Static Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Loop__Host_Static_Name__c</fullName>
        <label>Host Static Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Host_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Host User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Host_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loop__IntegrationOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Option</label>
        <referenceTo>Loop__DDP_Integration_Option__c</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loop__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__OnAccessCodeFailed__c</fullName>
        <label>On Access Code Failed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__OnCancel__c</fullName>
        <label>On Cancel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__OnDecline__c</fullName>
        <label>On Decline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__OnException__c</fullName>
        <label>On Exception</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__OnIdCheckFailed__c</fullName>
        <label>On Id Check Failed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__OnSessionTimeout__c</fullName>
        <label>On Session Timeout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__OnSigningComplete__c</fullName>
        <label>On Signing Complete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__OnTTLExpired__c</fullName>
        <label>On TTL Expired</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__OnViewingComplete__c</fullName>
        <label>On Viewing Complete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__RoleGroupNames__c</fullName>
        <inlineHelpText>Type the Role or User Group names separated by double commas for this recipient.</inlineHelpText>
        <label>Role/Group Names</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__SigningGroupId__c</fullName>
        <label>Signing Group Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__SigningGroupName__c</fullName>
        <label>Signing Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__SigningOrder__c</fullName>
        <inlineHelpText>When using the standard signing options, this number is used in the document to denote which options belong to this recipient. For example, if Recipient # is 2, the dl.signhere option will be typed into the document as &quot;dl.signhere.2&quot;.</inlineHelpText>
        <label>Recipient #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__Specified_Host__c</fullName>
        <inlineHelpText>For an In Person Signer recipient, this is the person that will &quot;host&quot; the in person signing event (who the email is sent to).</inlineHelpText>
        <label>Specified Host</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current User</fullName>
                </value>
                <value>
                    <fullName>User Selected Contact</fullName>
                </value>
                <value>
                    <fullName>Selected Contact</fullName>
                </value>
                <value>
                    <fullName>Selected User</fullName>
                </value>
                <value>
                    <fullName>User Lookup</fullName>
                </value>
                <value>
                    <fullName>Contact Lookup</fullName>
                </value>
                <value>
                    <fullName>Static Name-Email</fullName>
                </value>
                <value>
                    <fullName>User Selected Name-Email</fullName>
                </value>
                <value>
                    <fullName>Dynamic Name-Email</fullName>
                </value>
                <value>
                    <fullName>Roles or Groups</fullName>
                </value>
                <value>
                    <fullName>Object Owner</fullName>
                </value>
                <value>
                    <fullName>Object Creator</fullName>
                </value>
                <value>
                    <fullName>Current User&apos;s Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__StaticEmail__c</fullName>
        <label>Static Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Loop__StaticName__c</fullName>
        <label>Static Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__dsAllowAccessCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Access Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__dsCheckId__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Id Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__dsContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loop__dsRequired__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__dsRoleName__c</fullName>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__dsRoutingOrder__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>This specifies the order in which recipients receive the document to sign.</inlineHelpText>
        <label>Signing Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__dsSignOptions__c</fullName>
        <label>Sign Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>dl.signhere</fullName>
                </value>
                <value>
                    <fullName>dl.signhereoptional</fullName>
                </value>
                <value>
                    <fullName>dl.initialhere</fullName>
                </value>
                <value>
                    <fullName>dl.initialhereoptional</fullName>
                </value>
                <value>
                    <fullName>dl.fullname</fullName>
                </value>
                <value>
                    <fullName>dl.company</fullName>
                </value>
                <value>
                    <fullName>dl.title</fullName>
                </value>
                <value>
                    <fullName>dl.datesign</fullName>
                </value>
                <value>
                    <fullName>dl.envelopeid</fullName>
                </value>
                <value>
                    <fullName>dl.signerattachment</fullName>
                </value>
                <value>
                    <fullName>dl.firstname</fullName>
                </value>
                <value>
                    <fullName>dl.lastname</fullName>
                </value>
                <value>
                    <fullName>dl.emailaddress</fullName>
                </value>
                <value>
                    <fullName>dl.approve</fullName>
                </value>
                <value>
                    <fullName>dl.decline</fullName>
                </value>
                <value>
                    <fullName>dl.capture</fullName>
                </value>
                <value>
                    <fullName>dl.mobilecapture</fullName>
                </value>
                <value>
                    <fullName>dl.acceptance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__dsStaticRecipient__c</fullName>
        <inlineHelpText>This changes which recipients the user can select from.</inlineHelpText>
        <label>Specified Recipient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User Selected Contact</fullName>
                </value>
                <value>
                    <fullName>Current User</fullName>
                </value>
                <value>
                    <fullName>Selected Contact</fullName>
                </value>
                <value>
                    <fullName>Selected User</fullName>
                </value>
                <value>
                    <fullName>User Lookup</fullName>
                </value>
                <value>
                    <fullName>Contact Lookup</fullName>
                </value>
                <value>
                    <fullName>Static Name-Email</fullName>
                </value>
                <value>
                    <fullName>User Selected Name-Email</fullName>
                </value>
                <value>
                    <fullName>Dynamic Name-Email</fullName>
                </value>
                <value>
                    <fullName>Roles or Groups</fullName>
                </value>
                <value>
                    <fullName>Object Owner</fullName>
                </value>
                <value>
                    <fullName>Object Creator</fullName>
                </value>
                <value>
                    <fullName>Current User&apos;s Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__dsType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signer</fullName>
                    <default>true</default>
                    <label>Signer</label>
                </value>
                <value>
                    <fullName>Carbon Copy</fullName>
                </value>
                <value>
                    <fullName>Certified Delivery</fullName>
                </value>
                <value>
                    <fullName>In Person Signer</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__dsUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Recipient</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Recipient</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Loop__Recipient_Address</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Loop__dsStaticRecipient__c , &quot;Static Name-Email&quot; ) ,  AND(ISBLANK( Loop__Address__c ), ISBLANK( Loop__StaticEmail__c )) , NOT( BEGINS( Loop__StaticName__c , &quot;!&quot; ) ) )</errorConditionFormula>
        <errorDisplayField>Loop__Address__c</errorDisplayField>
        <errorMessage>An address is required for a Static Name-Email recipient.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loop__Recipient_Dynamic_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Loop__dsStaticRecipient__c , &quot;Dynamic Name-Email&quot; ) ,  ISBLANK( Loop__StaticName__c )  )</errorConditionFormula>
        <errorDisplayField>Loop__StaticName__c</errorDisplayField>
        <errorMessage>A parameter is required for a Dynamic Name-Email recipient.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loop__Recipient_Selected_Contact</fullName>
        <active>true</active>
        <description>Recipient must be related to a contact if Selected Contact is chosen.</description>
        <errorConditionFormula>AND( ISPICKVAL( Loop__dsStaticRecipient__c, &quot;Selected Contact&quot;),  Loop__dsContact__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Loop__dsContact__c</errorDisplayField>
        <errorMessage>Selected contact static recipient requires a contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loop__Recipient_Selected_User</fullName>
        <active>true</active>
        <description>Recipient must be related to a user if Selected User is chosen.</description>
        <errorConditionFormula>AND( ISPICKVAL( Loop__dsStaticRecipient__c, &quot;Selected User&quot;),  Loop__dsUser__c  = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Loop__dsUser__c</errorDisplayField>
        <errorMessage>Selected user static recipient requires a user.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loop__Recipient_Static_Email</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Loop__dsStaticRecipient__c , &quot;Static Name-Email&quot; ) ,  AND(ISBLANK( Loop__Address__c ), ISBLANK( Loop__StaticEmail__c )) , NOT( BEGINS( Loop__StaticName__c , &quot;!&quot; ) ) )</errorConditionFormula>
        <errorDisplayField>Loop__Address__c</errorDisplayField>
        <errorMessage>An address is required for a Static Name-Email recipient.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loop__Recipient_Static_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Loop__dsStaticRecipient__c , &quot;Static Name-Email&quot; ) ,  ISBLANK( Loop__StaticName__c )  )</errorConditionFormula>
        <errorDisplayField>Loop__StaticName__c</errorDisplayField>
        <errorMessage>A static name is required for a Static Name-Email recipient.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loop__SignNow_Signer_requires_Role_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Loop__IntegrationOption__r.RecordType.DeveloperName = &apos;SignNow&apos;,  ISPICKVAL( Loop__dsType__c , &apos;Signer&apos;), ISBLANK( Loop__dsRoleName__c ) )</errorConditionFormula>
        <errorDisplayField>Loop__dsRoleName__c</errorDisplayField>
        <errorMessage>A SignNow Recipient with Type of Signer requires a Role Name.</errorMessage>
    </validationRules>
</CustomObject>